Put medium article and remove some unused images

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="./images/simon-logo-s.png">
     <!--Bootstrap CSS-->
     <link
       rel="stylesheet"
@@ -71,13 +72,18 @@
               >
             </li>
             <li>
+              <a href="#experiences" class="hash"
+                ><i class="fas fa-briefcase"></i> Experiences</a
+              >
+            </li>
+            <li>
               <a href="#portfolio" class="hash"
                 ><i class="fas fa-project-diagram"></i> Projects</a
               >
             </li>
             <li>
-              <a href="#experiences" class="hash"
-                ><i class="fas fa-briefcase"></i> Experiences</a
+              <a href="#others" class="hash"
+                ><i class="fas fa-plus"></i> Others</a
               >
             </li>
           </ul>
@@ -174,45 +180,7 @@
       </section>
       <!--end about-->
 
-      <section id="portfolio" class="main-nav">
-        <!--start portfolio-->
-        <h1><i class="fas fa-project-diagram"></i> Personal Projects</h1>
-        <div class="row">
-          <!---start row-->
-
-          <div class="col-sm-12">
-            <!---start element 1-->
-            <h2 class="text-primary stm-font">
-              <a
-                href="https://ideasite-service1-hmwa3aeaha-ue.a.run.app/"
-                target="_blank"
-              >
-                IdeaSite
-                <i class="fas fa-external-link-alt"></i>
-              </a>
-            </h2>
-            <h3>Stack: React, Express, MongoDB, Tailwind, GraphQL, Docker</h3>
-            <ul class="list-group">
-              <li class="list-group-item">
-                Worked on the development of the whole application
-              </li>
-              <li class="list-group-item">
-                Deployed to Google Cloud Run using GitHub Actions
-              </li>
-            </ul>
-            <h4>
-              GitHub Link:
-              <a href="https://github.com/simonsd054/IdeaSite" target="_blank">
-                https://github.com/simonsd054/IdeaSite
-              </a>
-            </h4>
-          </div>
-          <!---end element 1-->
-        </div>
-      </section>
-      <!--end portfolio-->
-
-      <section id="experiences" class="main-nav pb-200">
+      <section id="experiences" class="main-nav">
         <!--start experiences-->
         <h1><i class="fas fa-briefcase"></i> Experiences</h1>
         <div class="row">
@@ -309,6 +277,69 @@
         </div>
       </section>
       <!--end experiences-->
+
+      <section id="portfolio" class="main-nav">
+        <!--start portfolio-->
+        <h1><i class="fas fa-project-diagram"></i> Personal Projects</h1>
+        <div class="row">
+          <!---start row-->
+
+          <div class="col-sm-12">
+            <!---start element 1-->
+            <h2 class="text-primary stm-font">
+              <a
+                href="https://ideasite-service1-hmwa3aeaha-ue.a.run.app/"
+                target="_blank"
+              >
+                IdeaSite
+                <i class="fas fa-external-link-alt"></i>
+              </a>
+            </h2>
+            <h3>Stack: React, Express, MongoDB, Tailwind, GraphQL, Docker</h3>
+            <ul class="list-group">
+              <li class="list-group-item">
+                Worked on the development of the whole application
+              </li>
+              <li class="list-group-item">
+                Deployed to Google Cloud Run using GitHub Actions
+              </li>
+            </ul>
+            <h4>
+              GitHub Link:
+              <a href="https://github.com/simonsd054/IdeaSite" target="_blank">
+                https://github.com/simonsd054/IdeaSite
+              </a>
+            </h4>
+          </div>
+          <!---end element 1-->
+        </div>
+      </section>
+      <!--end portfolio-->
+
+      <section id="others" class="main-nav pb-200">
+        <!--start others-->
+        <h1><i class="fas fa-plus"></i> Others</h1>
+        <div class="row">
+          <!---start row-->
+
+          <div class="col-sm-12">
+            <!---start element 1-->
+            <h2 class="text-primary stm-font">
+              Article about deploying a containerized MERN web app
+            </h2>
+            <h3>Stack: MERN, Docker, Google Cloud Run, GitHub Actions</h3>
+            <h3>
+              Article Link:
+              <a href="https://medium.com/p/f1d0ae828f8e" target="_blank">
+                https://medium.com/p/f1d0ae828f8e
+                <i class="fas fa-external-link-alt"></i>
+              </a>
+            </h3>
+          </div>
+          <!---end element 1-->
+        </div>
+      </section>
+      <!--end others-->
     </div>
     <!---end container-->
     <!--end container-->
