Add xc3 certification

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="./images/simon-logo-s.png">
+    <link rel="icon" type="image/x-icon" href="./images/simon-logo-s.png" />
     <!--Bootstrap CSS-->
     <link
       rel="stylesheet"
@@ -284,7 +284,7 @@
         <div class="row">
           <!---start row-->
 
-          <div class="col-sm-12">
+          <div class="col-sm-12 mb-20">
             <!---start element 1-->
             <h2 class="text-primary stm-font">
               <a
@@ -316,27 +316,71 @@
       </section>
       <!--end portfolio-->
 
-      <section id="others" class="main-nav pb-200">
+      <section id="others" class="main-nav">
         <!--start others-->
         <h1><i class="fas fa-plus"></i> Others</h1>
         <div class="row">
           <!---start row-->
 
-          <div class="col-sm-12">
+          <div class="col-sm-12 mb-20">
             <!---start element 1-->
             <h2 class="text-primary stm-font">
               Article about deploying a containerized MERN web app
             </h2>
             <h3>Stack: MERN, Docker, Google Cloud Run, GitHub Actions</h3>
-            <h3>
+            <ul class="list-group">
+              <li class="list-group-item">
+                An article explaining the steps to deploy a containerized MERN web
+                app to Google Cloud Run using GitHub Actions
+              </li>
+            </ul>
+            <h4>
               Article Link:
               <a href="https://medium.com/p/f1d0ae828f8e" target="_blank">
                 https://medium.com/p/f1d0ae828f8e
-                <i class="fas fa-external-link-alt"></i>
               </a>
-            </h3>
+            </h4>
           </div>
           <!---end element 1-->
+
+          <div class="col-sm-12 mb-20">
+            <!---start element 2-->
+            <h2 class="text-primary stm-font">
+              Contribution to open-source project - XC3
+            </h2>
+            <h3>
+              <a href="https://github.com/XgridInc/xc3" target="_blank">XC3</a>
+              is a cloud cost control and monitoring tool.
+            </h3>
+            <ul class="list-group">
+              <li class="list-group-item">
+                Implemented cost breakdown based on projects
+              </li>
+              <li class="list-group-item">
+                Fetched costs of resources for individual projects in lambda
+                functions
+              </li>
+              <li class="list-group-item">
+                Visualized the costs in charts using grafana
+              </li>
+            </ul>
+            <h4>
+              Link to the pull request:
+              <a href="https://github.com/XgridInc/xc3/pull/74" target="_blank">
+                https://github.com/XgridInc/xc3/pull/74
+              </a>
+            </h4>
+            <h4>
+              Certificate of Appreciation:
+              <a
+                href="https://drive.google.com/file/d/1UejomXn7KUCfZjvyL6WKbZcBsnGHH7Gj/view?usp=sharing"
+                target="_blank"
+              >
+                Google Drive Link
+              </a>
+            </h4>
+          </div>
+          <!---end element 2-->
         </div>
       </section>
       <!--end others-->
