Add ausadhi as second personal project

--- a/index.html
+++ b/index.html
@@ -294,8 +294,12 @@
                 IdeaSite
                 <i class="fas fa-external-link-alt"></i>
               </a>
+              - A website to share ideas
             </h2>
-            <h3>Stack: React, Express, MongoDB, Tailwind, GraphQL, Docker</h3>
+            <h3>
+              Stack: React, Express, MongoDB, Tailwind, GraphQL, React Query,
+              React Hook Form, Docker
+            </h3>
             <ul class="list-group">
               <li class="list-group-item">
                 Worked on the development of the whole application
@@ -312,6 +316,39 @@
             </h4>
           </div>
           <!---end element 1-->
+
+          <div class="col-sm-12 mb-20">
+            <!---start element 2-->
+            <h2 class="text-primary stm-font">
+              <a
+                href="https://ausadhi-service-lph6d5wwda-ue.a.run.app/"
+                target="_blank"
+              >
+                Ausadhi
+                <i class="fas fa-external-link-alt"></i>
+              </a>
+              - A medicine management web app
+            </h2>
+            <h3>
+              Stack: Typescript, React, Express, MongoDB, Tailwind, GraphQL,
+              React Query, React Hook Form, Docker
+            </h3>
+            <ul class="list-group">
+              <li class="list-group-item">
+                Worked on the development of the whole application
+              </li>
+              <li class="list-group-item">
+                Deployed to Google Cloud Run using GitHub Actions
+              </li>
+            </ul>
+            <h4>
+              GitHub Link:
+              <a href="https://github.com/simonsd054/ausadhi" target="_blank">
+                https://github.com/simonsd054/ausadhi
+              </a>
+            </h4>
+          </div>
+          <!---end element 2-->
         </div>
       </section>
       <!--end portfolio-->
@@ -330,8 +367,8 @@
             <h3>Stack: MERN, Docker, Google Cloud Run, GitHub Actions</h3>
             <ul class="list-group">
               <li class="list-group-item">
-                An article explaining the steps to deploy a containerized MERN web
-                app to Google Cloud Run using GitHub Actions
+                An article explaining the steps to deploy a containerized MERN
+                web app to Google Cloud Run using GitHub Actions
               </li>
             </ul>
             <h4>
