Remove links from projects

--- a/index.html
+++ b/index.html
@@ -287,13 +287,13 @@
           <div class="col-sm-12 mb-20">
             <!---start element 1-->
             <h2 class="text-primary stm-font">
-              <a
+              <!-- <a
                 href="https://ideasite-service1-hmwa3aeaha-ue.a.run.app/"
                 target="_blank"
-              >
-                IdeaSite
-                <i class="fas fa-external-link-alt"></i>
-              </a>
+              > -->
+              IdeaSite
+                <!-- <i class="fas fa-external-link-alt"></i> -->
+              <!-- </a> -->
               - A website to share ideas
             </h2>
             <h3>
@@ -320,13 +320,13 @@
           <div class="col-sm-12 mb-20">
             <!---start element 2-->
             <h2 class="text-primary stm-font">
-              <a
+              <!-- <a
                 href="https://ausadhi-service-lph6d5wwda-ue.a.run.app/"
                 target="_blank"
-              >
-                Ausadhi
-                <i class="fas fa-external-link-alt"></i>
-              </a>
+              > -->
+              Ausadhi
+                <!-- <i class="fas fa-external-link-alt"></i> -->
+              <!-- </a> -->
               - A medicine management web app
             </h2>
             <h3>
