Add DPHI experience

--- a/index.html
+++ b/index.html
@@ -189,8 +189,29 @@
           <div class="col-sm-12 mb-20">
             <!---start element 1-->
             <div class="experience-section">
+              <h2 class="text-primary stm-font">Department of Planning, Housing and Infrastructure</h2>
+              <h4 class="experience-date">03 February, 2024 - Present</h4>
+            </div>
+            <h4 class="m-0">Graduate - Digital Stream</h4>
+            <h3>
+              Stack: ServiceNow, JS
+            </h3>
+            <ul class="list-group">
+              <li class="list-group-item">
+                Handle Operations and Management of ServiceNow system
+              </li>
+              <li class="list-group-item">
+                ServiceNow Administration and Development
+              </li>
+            </ul>
+          </div>
+          <!---end element 1-->
+
+          <div class="col-sm-12 mb-20">
+            <!---start element 2-->
+            <div class="experience-section">
               <h2 class="text-primary stm-font">Coder Academy, Australia</h2>
-              <h4 class="experience-date">08 August, 2022 - Present</h4>
+              <h4 class="experience-date">08 August, 2022 - 01 February, 2024</h4>
             </div>
             <h4 class="m-0">Academic Teacher</h4>
             <h3>
@@ -211,10 +232,10 @@
               </li>
             </ul>
           </div>
-          <!---end element 1-->
+          <!---end element 2-->
 
           <div class="col-sm-12 mb-20">
-            <!---start element 2-->
+            <!---start element 3-->
             <div class="experience-section">
               <h2 class="text-primary stm-font">
                 Rara Digital Lab Pvt Ltd, Nepal
@@ -241,10 +262,10 @@
               </li>
             </ul>
           </div>
-          <!---end element 2-->
+          <!---end element 3-->
 
           <div class="col-sm-12 mb-20">
-            <!---start element 3-->
+            <!---start element 4-->
             <div class="experience-section">
               <h2 class="text-primary stm-font">
                 Jyaasa Technologies Pvt Ltd (Gurzu Inc.), Nepal
@@ -273,7 +294,7 @@
               </li>
             </ul>
           </div>
-          <!---end element 3-->
+          <!---end element 4-->
         </div>
       </section>
       <!--end experiences-->
